--- a/src/gamex86.vcxproj
+++ b/src/gamex86.vcxproj
@@ -158,8 +158,7 @@
     <PostBuildEvent>
       <Message>
       </Message>
-      <Command>
-      </Command>
+      <Command>copy Release\gamex86.dll c:\quake2\vortex\gamex86.real.dll</Command>
     </PostBuildEvent>
     <Link>
       <AdditionalDependencies>libmysql.lib;Wininet.lib;Winmm.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
