--- a/src/gamex86.vcxproj.filters
+++ b/src/gamex86.vcxproj.filters
@@ -691,5 +691,8 @@
     <ClInclude Include="abil\Spirit.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="menu\menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
