--- a/src/gamex86.vcxproj.filters
+++ b/src/gamex86.vcxproj.filters
@@ -539,6 +539,7 @@
     <None Include="game.def">
       <Filter>Resources</Filter>
     </None>
+    <None Include="GNUmakefile" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ally.h">
