Tidy up things a bit.

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -56,8 +56,11 @@ LIBTOOL = otool
 endif
 
 CFLAGS += -DREMOVE_RESPAWNS
-CFLAGS += -DCMD_USEHASH -DALLOW_ADMIN -DQ2PRO_COMPATIBILITY
-CFLAGS += -DNO_GDS -DGDS_NOMULTITHREADING
+CFLAGS += -DCMD_USEHASH
+CFLAGS += -DALLOW_ADMIN
+CFLAGS += -DQ2PRO_COMPATIBILITY
+CFLAGS += -DNO_GDS 
+#CFLAGS += -DGDS_NOMULTITHREADING
 #CFLAGS += -DSQLITE_HOMEGROWN_RECURSIVE_MUTEX
 
 
