Oops. No GDS, no GDS multithreading.

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -60,7 +60,7 @@ CFLAGS += -DCMD_USEHASH
 CFLAGS += -DALLOW_ADMIN
 CFLAGS += -DQ2PRO_COMPATIBILITY
 CFLAGS += -DNO_GDS 
-#CFLAGS += -DGDS_NOMULTITHREADING
+CFLAGS += -DGDS_NOMULTITHREADING
 #CFLAGS += -DSQLITE_HOMEGROWN_RECURSIVE_MUTEX
 
 
