Don't remove respawns.

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -55,7 +55,7 @@ CFLAGS += -DLINUX
 LIBTOOL = otool
 endif
 
-CFLAGS += -DREMOVE_RESPAWNS
+#CFLAGS += -DREMOVE_RESPAWNS
 CFLAGS += -DCMD_USEHASH
 CFLAGS += -DALLOW_ADMIN
 CFLAGS += -DQ2PRO_COMPATIBILITY
